--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kanban-board",
   "version": "0.1.0",
-  "homepage": "http://localhost:3000/v1",
+  "homepage": "https://kanban-board-qhq17y423-franzmikael.vercel.app/v1",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
