--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kanban-board",
   "version": "0.1.0",
+  "homepage": "https://kanban-board-navy.vercel.app/v1",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
